--- a/TODO
+++ b/TODO
@@ -5,4 +5,7 @@ optimize clusterEngine communication
 
 
 ///
+mvn clean compile assembly:single
+
+///
 mvn -DmemoryInMB=2000 -Dcores=2 evosuite:generate evosuite:export  test
