--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 add refragmentation for dbFileEngine and indexFileEngine
 optimize clusterEngine communication
-
+use cryptoghraphy for cluster engine and network engine
 
 
 ///
