--- a/TODO
+++ b/TODO
@@ -1,11 +1,12 @@
 add refragmentation for dbFileEngine and indexFileEngine.
 optimize clusterEngine communication.
 use cryptoghraphy for cluster engine and network engine.
-add data load balancer. distribute data among nodes.
 dynamic config!
 add admin panel.
 add node monitor.
+donnot save other nodes data. just remmeber which node is the owner of a key.
 Currently the cluster should be a complete graph. make it work with not complete graph schema.
+add data load balancer. distribute data among nodes.
 
 /// for compilling a fat jar
 mvn clean compile assembly:single
